# neurips21-self-supervised-bug-detection-and-repair

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CITATION.cff  Dockerfile  README.md  SUPPORT.md  azure-pipelines.yml  prometheus.yml  pyproject.toml  requirements.txt
.github/workflows/: codeql-analysis.yml
buglab/controllers/: buggydatacreation.py  bugselectorserver.py  datageneratingpipeline_coordinator.py  datageneratingpipeline_worker.py  detectordatascoringworker.py  detectortrainingdatabuffer.py  packageextracttodisk.py  staticdatasetextractor.py  trainbugdetector.py  trainbugselector.py
buglab/data/: filter_candidates_to_bugtype.py  filter_data_to_cubert.py  split.py  stats.py
buglab/models/: basemodel.py  evaluate.py  gnn.py  gnnlayerdefs.py  greatreimplementation.py  hypergnn.py  modelregistry.py  rewrite_chooser_module.py  seqmodel.py  train.py  trainandeval.py  traingreat.py  utils.py  visualize.py
buglab/representations/: asdot.py  codereprs.py  convert_data_to_hypergraph.py  data.py  hypergraph.py
buglab/rewriting/: __init__.py  removeannotations.py  rewriteops.py  rewritescouts.py  semanticspreserving.py
buglab/utils/: __init__.py  bucketing.py  cstutils.py  fileopen.py  iteratorutils.py  logging.py  loggingutils.py  msgpackutils.py  randomutils.py  replaybuffer.py  text.py  timeout.py
deployment/: supervised-values.yml
deployment/buglab/: Chart.yaml  values.yaml
deployment/terraform/: helm.tf  (+9 more)
tests/: test_extraction.py  test_modelsync.py  test_range.py  test_replaybuffer.py  test_rewrites.py  test_semantic_preserving.py  utils.py
(+75 files in other folders)
