[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme="python-simplified-semver"
write_to="buglab/__version__.py"
local_scheme="no-local-version"

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
known_first_party="buglab"
known_third_party="numpy,torch,azureml,jedi,dpu_utils,docopt,jellyfish,torch_scatter,tqdm,libcst,zmq,msgpack"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | tests/testsnippets
)
'''
